welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:1: error: illegal start of simple pattern
case : string = litMessage()
     ^BDR2:23: error: '=>' expected but '}' found.
	}
        ^